feat: add download endpoint
